--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,13 @@
 # Header
 menu:
-  Home: /
   Archives: /archives
+
+sub_menu:
+  archives:
+    Test1: /archives/test1
+    Test2: /archives/test2
+    Test3: /archives/test3
+
 rss: /atom.xml
 
 # Content
